// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> Debe de mostrar items cuando se cargan imágenes con useFetchGifs() 1`] = `
<Fragment>
  <h3
    className="gif-title"
  >
    Ozark
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Gif"
      url="https://localhost/images/gif.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid/> Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="gif-title"
  >
    Ozark
  </h3>
  <div
    className="alert alert-info"
    id="loadingAlert"
    role="alert"
  >
    Cargando Imágenes
  </div>
  <div
    className="card-grid"
  />
</Fragment>
`;
